; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/rtc/extr_rtc-twl4030.c_mask_rtc_irq_bit.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/rtc/extr_rtc-twl4030.c_mask_rtc_irq_bit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@rtc_irq_bits = common dso_local global i8 0, align 1
@REG_RTC_INTERRUPTS_REG = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8)* @mask_rtc_irq_bit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mask_rtc_irq_bit(i8 zeroext %0) #0 {
  %2 = alloca i8, align 1
  %3 = alloca i8, align 1
  %4 = alloca i32, align 4
  store i8 %0, i8* %2, align 1
  %5 = load i8, i8* @rtc_irq_bits, align 1
  %6 = zext i8 %5 to i32
  %7 = load i8, i8* %2, align 1
  %8 = zext i8 %7 to i32
  %9 = xor i32 %8, -1
  %10 = and i32 %6, %9
  %11 = trunc i32 %10 to i8
  store i8 %11, i8* %3, align 1
  %12 = load i8, i8* %3, align 1
  %13 = load i32, i32* @REG_RTC_INTERRUPTS_REG, align 4
  %14 = call i32 @twl4030_rtc_write_u8(i8 zeroext %12, i32 %13)
  store i32 %14, i32* %4, align 4
  %15 = load i32, i32* %4, align 4
  %16 = icmp eq i32 %15, 0
  br i1 %16, label %17, label %19

17:                                               ; preds = %1
  %18 = load i8, i8* %3, align 1
  store i8 %18, i8* @rtc_irq_bits, align 1
  br label %19

19:                                               ; preds = %17, %1
  %20 = load i32, i32* %4, align 4
  ret i32 %20
}

declare dso_local i32 @twl4030_rtc_write_u8(i8 zeroext, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
